Change shelf icon. Modify viewbox of key icon. Move custom_data_confirm script to menu.js. Style warning icon in login, create user and create collection forms. Complete edit and update action in collections controller. Remove default and custom name columns form collections table and change code tied to those columns. Add default scope and name uniqueness validations to collection model. Finish styling create and edit collection form. Use j as alias for escape_javascript. Fix problem with some js scripts (considering side menu) not working after updating (rendering again) menu.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -856,7 +856,7 @@ img.lock-icon {
 
 .login-input:focus {
     outline: none;
-    background-color: #dddddd;
+    background-color: #eaeaea;
     color: #666;
     border-color: #939393;
 }
@@ -969,13 +969,13 @@ p.header {
     width: 30px;
     height: 30px;
     position: absolute;
-    left: 2.5px;
-    top: 5px;
+    left: 4px;
+    top: 6px;
 }
 
 #key-icon {
-    width: 28px;
-    height: 28px;
+    width: 30px;
+    height: 30px;
     position: absolute;
     left: 4px;
     top: 6px;
@@ -998,8 +998,8 @@ p.header {
 }
 
 .warning-icon {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     background: url("warning.svg");
     background-size: 100% 100%;
     background-position: center;
@@ -1009,8 +1009,10 @@ p.header {
 
 .search-warning-icon {
     @extend .warning-icon;
-
-    background-size: 70% 70%;
+    position: absolute;
+    left: 25px;
+    top: 50%;
+    margin-top: -15px;
 }
 
 // Eye (unmask password)- - - - - - - - - - - - - - - - - - - - - - - - - - - //
