--- a/app/views/collections/new.js.erb
+++ b/app/views/collections/new.js.erb
@@ -1,2 +1,3 @@
-$("#create-coll-modal").find(".modal-content").html("<%= j (render 'new') %>");
+$("#create-coll-modal").find(".modal-content").html("<%= j(render 'form') %>");
 $("#m-add-coll").addClass('active')
+lorer();
