--- a/app/views/cover_view/_add_form_no_platform.html.erb
+++ b/app/views/cover_view/_add_form_no_platform.html.erb
@@ -30,5 +30,5 @@
     <%= f.hidden_field :screenshots, value: screen, multiple: true %>
   <% end %>
 <% end %>
-<button class="icon-btn uk-icon-link" type="submit" uk-icon="icon: <%= icon %>" uk-tooltip="title: Add to <%= collection.custom_name || collection.name %>; pos: top-left"></button>
+<button class="icon-btn uk-icon-link" type="submit" uk-icon="icon: <%= icon %>" uk-tooltip="title: Add to <%= collection.name %>; pos: top-left"></button>
 <% end %>
