--- a/app/views/games/copy.js.erb
+++ b/app/views/games/copy.js.erb
@@ -24,10 +24,10 @@ if (success) {
     UIkit.dropdown("#copy-form-" + game_id).hide();
 
     <% if !@copy || ( @current == @collection )%>
-      $("#big-c").html("<%= escape_javascript(render partial: 'panels_view/my_games_panels', locals: { collection: @current }) %>");
+      $("#big-c").html("<%= j(render partial: 'panels_view/my_games_panels', locals: { collection: @current }) %>");
     <% end %>
 
 } else {
-    $("#copy-form-" + game_id + " .add-form-errors").html("<%= escape_javascript(render partial: 'add_form_errors', locals: { errors: @errors }) %>");
+    $("#copy-form-" + game_id + " .add-form-errors").html("<%= j(render partial: 'add_form_errors', locals: { errors: @errors }) %>");
     resetFormErrors('copy', game_id);
 }
