--- a/app/assets/stylesheets/collections.scss
+++ b/app/assets/stylesheets/collections.scss
@@ -1,12 +1,43 @@
 #create-coll-modal .uk-modal-body {
 
 .header {
-    margin-bottom: 10px;
+    font-size: 20px;
+    margin-bottom: 20px;
 }
 
-padding: 15px;
+padding: 20px;
 font-size: 14px;
-width: 400px;
-color: $light_grey;
+width: 450px;
+color: $dark_grey;
 
+}
+
+#edit-coll-modal {
+  @extend #create-coll-modal;
+}
+
+#coll-icon-input {
+    position: absolute;
+    top: 6px;
+    left: 3px;
+}
+
+.small {
+ font-size: 12px;
+ font-style: italic;
+ color: $light_grey;
+}
+
+.add-coll-icon {
+    position: relative;
+    left: 9px;
+    top: -5px;
+}
+
+.uk-checkbox:disabled {
+    background-color: #eaeaea;
+}
+
+label.disabled {
+  color: $light_grey;
 }
