--- a/app/views/collections/create.js.erb
+++ b/app/views/collections/create.js.erb
@@ -1,22 +1,5 @@
-var msg = '<%= @message %>';
-var msg_pos = 'top-right';
 var active_el_id = $('li.active').attr('id');
 UIkit.modal($('#create-coll-modal')).hide();
-$(".side-menu").replaceWith("<%= escape_javascript(render partial: 'layouts/menu') %>");
+$(".side-menu").replaceWith("<%= j(render partial: 'layouts/menu') %>");
 $('#' + active_el_id).addClass('active');
-
-if ($('.uk-offcanvas-container').length) {
-    var offc_class = $('.uk-offcanvas-container').attr('class');
-
-    if (offc_class.includes('uk-offcanvas-flip')) {
-        msg_pos = 'top-left';
-    }
-}
-
-if (msg) {
-    UIkit.notification({
-        message: $('<div/>').html(msg).text(),
-        pos: msg_pos,
-        timeout: 5000
-    });
-}
+custom_data_confirm();
