--- a/app/views/games/create.js.erb
+++ b/app/views/games/create.js.erb
@@ -43,9 +43,9 @@ if (success) {
         var already = "#add-" + form + "-form-" + game_id + " .already-in";
 
         if (form === 'collection') {
-        var proxy = "<%= escape_javascript(render partial: 'cover_view/already_in_collection', locals: { collection: @collection, game_name: @game.name, igdb_id: @game.igdb_id }) %>";
+        var proxy = "<%= j(render partial: 'cover_view/already_in_collection', locals: { collection: @collection, game_name: @game.name, igdb_id: @game.igdb_id }) %>";
         } else {
-        var proxy = "<%= escape_javascript(render partial: 'cover_view/already_in_custom', locals: { game_name: @game.name, igdb_id: @game.igdb_id }) %>";
+        var proxy = "<%= j(render partial: 'cover_view/already_in_custom', locals: { game_name: @game.name, igdb_id: @game.igdb_id }) %>";
         }
 
         UIkit.util.on(drop_element, 'hidden', function () {
@@ -68,7 +68,7 @@ if (success) {
 
 // SHOWING ERRORS - BOTH FORMS (COLLECTION AND CUSTOM):
 var element = "#add-" + form + "-form-" + game_id + " .add-form-errors";
-$(element).html("<%= escape_javascript(render partial: 'add_form_errors', locals: { errors: @errors }) %>");
+$(element).html("<%= j(render partial: 'add_form_errors', locals: { errors: @errors }) %>");
 
 // RESETING ERROR STATUS UPON INPUT CHANGE - BOTH FORMS (COLLECTION AND CUSTOM):
 
