--- a/app/views/static_pages/_load_more.js.erb
+++ b/app/views/static_pages/_load_more.js.erb
@@ -1,4 +1,4 @@
-$("#show-more").html("<%= escape_javascript(render :partial => 'results') %>");
+$("#show-more").html("<%= j(render :partial => 'results') %>");
 $("#show-more").attr('id', 'showed_more');
 
 // Fit game title inside no-cover
