--- a/app/views/users/create.js.erb
+++ b/app/views/users/create.js.erb
@@ -1,2 +1,2 @@
-$("#mail-icon").replaceWith("<%= escape_javascript(render partial: 'form_mail_errors', locals: { errors: @errors[:email] }) %>");
-$("#key-icon").replaceWith("<%= escape_javascript(render partial: 'form_pass_errors', locals: { errors: @errors[:password] }) %>");
+$("#mail-icon").replaceWith("<%= j(render partial: 'form_mail_errors', locals: { errors: @errors[:email] }) %>");
+$("#key-icon").replaceWith("<%= j(render partial: 'form_pass_errors', locals: { errors: @errors[:password] }) %>");
