Add autofocus to text inputs with jQuery.

--- a/app/views/static_pages/search_page.js.erb
+++ b/app/views/static_pages/search_page.js.erb
@@ -1,3 +1,4 @@
 $("#big-c").html("<%= j(render partial: 'search_page') %>");
-$("li.active").removeClass('active')
-$("#m-search").addClass('active')
+$("li.active").removeClass('active');
+$("#m-search").addClass('active');
+$('input#search-igdb-bar').focus();
