--- a/app/views/collections/new.js.erb
+++ b/app/views/collections/new.js.erb
@@ -1,3 +1,6 @@
 $("#create-coll-modal").find(".modal-content").html("<%= j(render 'form') %>");
-$("#m-add-coll").addClass('active')
-lorer();
+$('input#collection_name').focus();
+$("#m-add-coll").addClass('active');
+remove_active_create_coll();
+
+
