--- a/app/views/users/new.js.erb
+++ b/app/views/users/new.js.erb
@@ -1,63 +1,21 @@
 $("#signup-modal").find(".modal-content").html("<%= j(render 'new') %>");
 
-$('#login-input-mail').on('input', function() {
-
-    $("#mail-icon").replaceWith("<%= j(render partial: 'form_mail_errors', locals: { errors: [] }) %>");
-
+$('#signup-mail').on('input', function() {
+    if ($('#mail-icon').hasClass('warning-icon')) {
+        $("#mail-icon").replaceWith("<%= j(render partial: 'form_mail_errors', locals: { errors: [] }) %>");
+    }
 });
 
-$('#password').on('input', function() {
-
-    $("#key-icon").replaceWith("<%= j(render partial: 'form_pass_errors', locals: { errors: [] }) %>");
-
+$('#signup-password').on('input', function() {
+    if ($('#key-icon').hasClass('warning-icon')) {
+        $("#key-icon").replaceWith("<%= j(render partial: 'form_pass_errors', locals: { errors: [] }) %>");
+    }
 });
 
 $('.unmask').on('click', function() {
-
     if ($(this).prev('input').attr('type') == 'password')
         changeType($(this).prev('input'), 'text');
-
     else
         changeType($(this).prev('input'), 'password');
-
     return false;
 });
-
-
-/*
-  function from : https://gist.github.com/3559343
-  Thank you bminer!
-*/
-
-function changeType(x, type) {
-    if (x.prop('type') == type)
-        return x; //That was easy.
-    try {
-        return x.prop('type', type); //Stupid IE security will not allow this
-    } catch (e) {
-        //Try re-creating the element (yep... this sucks)
-        //jQuery has no html() method for the element, so we have to put into a div first
-        var html = $("<div>").append(x.clone()).html();
-        var regex = /type=(\")?([^\"\s]+)(\")?/; //matches type=text or type="text"
-        //If no match, we add the type attribute to the end; otherwise, we replace
-        var tmp = $(html.match(regex) == null ?
-            html.replace(">", ' type="' + type + '">') :
-            html.replace(regex, 'type="' + type + '"'));
-        //Copy data from old element
-        tmp.data('type', x.data('type'));
-        var events = x.data('events');
-        var cb = function(events) {
-            return function() {
-                //Bind all prior events
-                for (i in events) {
-                    var y = events[i];
-                    for (j in y)
-                        tmp.bind(i, y[j].handler);
-                }
-            }
-        }(events);
-        x.replaceWith(tmp);
-        setTimeout(cb, 10); //Wait a bit to call function
-        return tmp;
-    }
-}
